Fixed my style error
using text-shadow and not showing messages

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,7 +1,6 @@
 body {
 	color: #000;
 	font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
-	text-shadow: 0 1px 0 #fff;
 	margin-left: 20px;
 	padding-left: 40px;
 	padding-right: 40px;
